Resolves: tdf#168017 fix a crash loading some documents

a problem since:

commit 6e870c040bb0f550c126f0fdeb2b9cd497658dd0
Date:   Thu Aug 7 21:30:15 2025 +0100

    expand default argument of unusual SetPara method

SetPara depended on a previous GetPara to reset its
cache state on a missing Para to function correctly.

Change-Id: I0952a428dd555514f89f89798f041393eb69e4e9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189956
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>